<resources>
    <string name="app_name">Pazi kje hodis</string>
    <string name="title_activity_maps">Map</string>
    <string name="add">Dodaj zgodbo</string>
    <string name="storySLO">Dodaj svojo zgodbo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">783783935107135</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="buttonSave">Save</string>
    <string name="buttonCancel">Cancel</string>


    <!-- VIEW DETAILS FRAGMENT CONTROL -->
    <string name="buttonAttach_details">Attach Pic</string>
    <string name="labelName_details">Name of the event</string>
    <string name="labelDetails_details">Please enter description for this event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
